--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 </h6>
 <h6>TL;DR: a joke about 2 women getting way too drunk</h6>
 </p>
-<a href="previous.html"><img src="previous.png" alt="previous" /></a>
-<a href="me.html"><img src="smee.png" alt="my page" /></a>
+<a href="https://cjkariuki.github.io/html-introduction/"><img src="previous.png" alt="previous" /></a>
+<a href="https://dr-m0rbius.github.io/html-introduction/"><img src="smee.png" alt="my page" /></a>
 
-<a href="next.html"><img src="next.png" alt="next"></a>
+<a href="https://galalkoro.github.io/html-introduction/"><img src="next.png" alt="next"></a>
 </body>
 </html>
