commit last changes (4)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </td></tr></thead></table>
 <p>Bertolami Dimitri</p>
 <h4>whenever i'm sad I sing a song.. Only to discover that my voice is worse than my problems</h4>
-<table id="about_table">
+<table id="about_table" align="center">
     <thead>
     <tr>
         <th>birthday</th>
@@ -43,6 +43,7 @@
 </table>
 <h5>hobbies</h5>
 <p>
+<div>
 <ol>
     <li>Playing Guitar</li>
     <li>Music production in Reason 11</li>
@@ -55,9 +56,10 @@
             <li>favorite  show: Upload</li></ul>
     <li>Watching cartoons with my kid</li>
 </ol>
-<H5>You can always count on me to help you with any technical issue you might encounter, <br>
+</div>
+<H5 align="center">You can always count on me to help you with any technical issue you might encounter, <br>
     I don't know the solution to everything but I do know how to google it</H5>
-<h6>two women are having a lady's night out and they quickly start consuming a load of alcohol.. <br>
+<h6 align="center">two women   are having a lady's night out and they quickly start consuming a load of alcohol.. <br>
     afterwards they both are really drunk and stumble back on their way home until the first one says<br>
     that she needs to use the toilet. they see a cemetary and decide to make a restroom brake there. <br>
     while the first one is doing her business the second one also urgently needs to go so she also <br>
