commit last changes (5)

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
     </tr>
     </tbody>
 </table>
-<h5>hobbies</h5>
-<p>
-<div>
+<h5 align="center">hobbies</h5>
 <ol>
     <li>Playing Guitar</li>
     <li>Music production in Reason 11</li>
@@ -56,7 +54,6 @@
             <li>favorite  show: Upload</li></ul>
     <li>Watching cartoons with my kid</li>
 </ol>
-</div>
 <H5 align="center">You can always count on me to help you with any technical issue you might encounter, <br>
     I don't know the solution to everything but I do know how to google it</H5>
 <h6 align="center">two women   are having a lady's night out and they quickly start consuming a load of alcohol.. <br>
@@ -72,7 +69,6 @@
     We will never forget you, on behalf of the entire fire department!" <br>
 </h6>
 <h6>TL;DR: a joke about 2 women getting way too drunk</h6>
-</p>
 <a href="https://cjkariuki.github.io/html-introduction/"><img src="previous.png" alt="previous" /></a>
 <a href="https://dr-m0rbius.github.io/html-introduction/"><img src="smee.png" alt="my page" /></a>
 
